# cpp-compiler

./: .clang-format  .gitignore  Dockerfile  Makefile  README.org  main.c  main.cpp  meson.build  meson_options.txt
include/: ast.hh  cpp-compiler-config.hpp.in  cpp-compiler.hpp  debug.hpp  driver.hh  evil-include.hh  lexer.hpp  lexic_values.hh  meson.build  scanner.hh  symbol.hh  tokens.h  tree.hh  utils.hh
script/: evil-code-injection.sh  release.sh
src/: cpp-compiler.cpp  main.cpp  meson.build  stage-1.cc  stage-2.cc  stage-3.cc
src/driver/: driver.cc  meson.build
src/lexer/: meson.build  scanner.hpp  scanner.l  tokens.h  tools.cpp  tools.hpp
src/lexic/: meson.build  scanner.l  tools.hpp
src/parser/: meson.build  parser.yy  scanner-tools.cc  scanner-tools.hh  scanner.l  scanner.ll
src/semantic/: ast.cc  meson.build
src/syntactic/: meson.build  parser.y
src/utils/: debug.cc  meson.build
